src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Exclude_from_Mulesoft_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CRM-QI-ESPSFDCQI-2110 Flag that will exclude account from mulesoft sync when set to true</description>
        <inlineHelpText>Flag that will exclude account from mulesoft sync when set to true</inlineHelpText>
        <label>Exclude from Mulesoft Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Global_Date_Risk_Assessed__c</fullName>
        <description>ESPSFDCQI-4861</description>
        <formula>IF(ISBLANK(Date_Risk_Assessed__c) ,
    IF(BEGINS( Parent.Name , &apos;LOCAL&apos;) , null , Parent.Date_Risk_Assessed__c) ,
    IF(TEXT(Risk_Rating__c) == &apos;6- Do Not Sell&apos; &amp;&amp; !Parent.Is_Super_Credit_Group_User__c,
        Date_Risk_Assessed__c,
        IF((Date_Risk_Assessed__c &lt;= Parent.Date_Risk_Assessed__c &amp;&amp; NOT(BEGINS( Parent.Name , &apos;LOCAL&apos;))),
            Parent.Date_Risk_Assessed__c,
            Date_Risk_Assessed__c
        )
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Date Risk Assessed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Global_Risk_Rating__c</fullName>
        <description>CRM-MC-ESPSFDCQI-4861/6801/7923</description>
        <formula>IF(ISBLANK(TEXT(Risk_Rating__c)) ,
    IF(BEGINS( Parent.Name , &apos;LOCAL&apos;) , &apos;&apos; , TEXT(Parent.Risk_Rating__c)) ,
    IF(TEXT(Risk_Rating__c) == &apos;6- Do Not Sell&apos; &amp;&amp; !Parent.Is_Super_Credit_Group_User__c,
        TEXT(Risk_Rating__c),
        IF((Date_Risk_Assessed__c &lt;= Parent.Date_Risk_Assessed__c &amp;&amp; NOT(BEGINS( Parent.Name , &apos;LOCAL&apos;))),
            TEXT(Parent.Risk_Rating__c),
            TEXT(Risk_Rating__c)
        )
    )
)</formula>
        <label>Risk Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Sub_Industry__c</fullName>
        <description>ESPSFDCQI-15609</description>
        <label>Global Sub Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <description>CRM-MC-ESPSFDCQI-1558 - This is &quot;Group&quot; value sent from MDM application (EBX5). This value is set on the global parent customer and will apply to all country level accounts beneath the global parent.</description>
        <formula>if(RecordType.DeveloperName==&apos;MDM_Validated_Account&apos;, Parent.MDM_Group__c,if(RecordType.DeveloperName==&apos;Global_Customer_Account&apos;,MDM_Group__c,&apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is &quot;Group&quot; value sent from MDM application (EBX5). This value is set on the global parent customer and will apply to all country level accounts beneath the global parent.</inlineHelpText>
        <label>Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HQ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Headquarter__c</fullName>
        <description>CRM-MC-ESPSFDCQI-1462/  ESPSFDCQI-15834 / ESPSFDCQI-16155</description>
        <inlineHelpText>*Global HQ* The entity which is driving most global decisions. It has Affiliates in more than one Region or is a Company with R&amp;D pipeline;
*Regional HQ* A Company with a Global HQ which has in addition Regional HQ covering multi-country Country Scope: e.g. APAC out of SG;
*Local HQ* A company which works only in single country or small Region, e.g. Brazil Company which works only in LATAM;
*Local Affiliate* The Account of a company which has a Global or Local Headquarter focusing on the local market.</inlineHelpText>
        <label>Headquarter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Global HQ</fullName>
                </value>
                <value>
                    <fullName>Local Affiliate</fullName>
                </value>
                <value>
                    <fullName>Local HQ</fullName>
                </value>
                <value>
                    <fullName>Regional HQ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IQVIA_Biotech_AD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CRM-MC-ESPSFDCQI-4423</description>
        <label>IQVIA Biotech AD</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>IQVIA_User_Contact</value>
            </filterItems>
            <filterItems>
                <field>Contact.Salesforce_User__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>IQVIA Biotechs</relationshipLabel>
        <relationshipName>IQVIA_Biotechs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Industry_IMS__c</fullName>
        <inlineHelpText>The individual industry sub types we deal with in and outside of pharma.</inlineHelpText>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PHARMA</fullName>
                </value>
                <value>
                    <fullName>CONSUMER HEALTH</fullName>
                </value>
                <value>
                    <fullName>MEDICAL DEVICES &amp; DIAGNOSTICS</fullName>
                </value>
                <value>
                    <fullName>SUPPLIERS TO PHARMA</fullName>
                </value>
                <value>
                    <fullName>INFORMATION &amp; SERVICE PROVIDERS</fullName>
                </value>
                <value>
                    <fullName>FINANCIAL COMMUNITY</fullName>
                </value>
                <value>
                    <fullName>INTERMEDIARIES &amp; DISTRIBUTORS</fullName>
                </value>
                <value>
                    <fullName>GOVERNMENT</fullName>
                </value>
                <value>
                    <fullName>PAYERS</fullName>
                </value>
                <value>
                    <fullName>PROVIDERS</fullName>
                </value>
                <value>
                    <fullName>ASSOCIATIONS</fullName>
                </value>
                <value>
                    <fullName>NON PROFIT</fullName>
                </value>
                <value>
                    <fullName>VETERINARY</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integrator_Partner_Recruitment_tracking__c</fullName>
        <description>PEP-ACN-Integrator Partner Recruitment tracking</description>
        <label>Integrator Partner Recruitment tracking</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consideration</fullName>
                </value>
                <value>
                    <fullName>Engagement</fullName>
                </value>
                <value>
                    <fullName>Contracting</fullName>
                </value>
                <value>
                    <fullName>Internal Setup</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Closed - IQVIA withdrew</fullName>
                </value>
                <value>
                    <fullName>Closed - Partner withdrew</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InterfaceStatus__c</fullName>
        <description>CSM-ACN-S-0036 - Picklist that defines Interface Status with values &quot;New ,Submitted ,Validating ,SAP Validated ,Validating ,Rejected&quot;</description>
        <label>Interface Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>SAP Validated</fullName>
                </value>
                <value>
                    <fullName>Validating</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsThisASpecialHandlingClient__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CSM-ACN-S-0036 - Checkbox to state whether client is a &quot;Special Handling account&quot;</description>
        <label>Is this a Special Handling Client?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Payment_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by TPA Module.</description>
        <label>Is Payment Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Super_Credit_Group_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CRM-MC-ESPSFDCQI-6801/7923</description>
        <label>Is Super Credit Group User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_valid_website__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CRM-MC-ESPSFDCQI-4330</description>
        <label>Is valid website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KBA_Visibility_Restriction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CSM-1644: used to limit access only to KBA in relation with the customer.</description>
        <label>KBA Visibility Restriction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company/Account</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LI_Account_Id__c</fullName>
        <externalId>true</externalId>
        <label>LI Account Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LI_Mulesoft_Error_Message__c</fullName>
        <label>LI Mulesoft Error Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LI_Mulesoft_Sync_Status__c</fullName>
        <label>LI Mulesoft Sync Status</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LI_Mulesoft_Sync_Timestamp__c</fullName>
        <description>CRM-QI-ESPSFDCQI-577 Timestamp indicating when record was successfully synced from IQVIA org to legacy IMS org via Mulesoft integration</description>
        <inlineHelpText>Timestamp indicating when record was successfully synced from IQVIA org to legacy IMS org via Mulesoft integration</inlineHelpText>
        <label>LI Mulesoft Sync Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LI_Mulesoft_Update_GUID__c</fullName>
        <description>CRM-MC-ESPSFDCQI-829 -</description>
        <label>LI Mulesoft Update GUID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LQ_Account_Id__c</fullName>
        <externalId>true</externalId>
        <label>LQ Account Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LQ_Mulesoft_Error_Message__c</fullName>
        <label>LQ Mulesoft Error Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LQ_Mulesoft_Sync_Status__c</fullName>
        <label>LQ Mulesoft Sync Status</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LQ_Mulesoft_Sync_Timestamp__c</fullName>
        <description>CRM-QI-ESPSFDCQI-577 Timestamp indicating when record was successfully synced from IQVIA org to legacy Quintiles org via Mulesoft integration</description>
        <inlineHelpText>Timestamp indicating when record was successfully synced from IQVIA org to legacy Quintiles org via Mulesoft integration</inlineHelpText>
        <label>LQ Mulesoft Sync Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LQ_Mulesoft_Update_GUID__c</fullName>
        <description>CRM-MC-ESPSFDCQI-829 -</description>
        <label>LQ Mulesoft Update GUID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Sharing_Calculation_Timestamp__c</fullName>
        <description>Last time sharing executed Date/Time</description>
        <inlineHelpText>Last time sharing executed Date/Time</inlineHelpText>
        <label>Last Sharing Calculation Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <description>CRM-QI-ESPSFDCQI-329 Unique id used for migrating Account records from external systems (e.g. during acquisition loads)</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique id used for migrating Account records from external systems (e.g. during acquisition loads)</inlineHelpText>
        <label>Legacy Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MDMID__c</fullName>
        <description>CSM-ACN-S-0036 - Texfield for MDM ID</description>
        <externalId>true</externalId>
        <label>MDM ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MDM_Category__c</fullName>
        <description>CRM-MC-ESPSFDCQI-1558 - Field to hold the Category value sent from MDM application (EBX5). This value is set on the global parent customer, but is displayed to users via a formula field on the country level account.</description>
        <inlineHelpText>Field to hold the Category value sent from MDM application (EBX5). This value is set on the global parent customer, but is displayed to users via a formula field on the country level account.</inlineHelpText>
        <label>MDM Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDM_Group__c</fullName>
        <description>CRM-MC-ESPSFDCQI-1558 - Field to hold the Group value sent from MDM application (EBX5). This value is set on the global parent customer, but is displayed to users via a formula field on the country level account.</description>
        <inlineHelpText>Field to hold the Group value sent from MDM application (EBX5). This value is set on the global parent customer, but is displayed to users via a formula field on the country level account.</inlineHelpText>
        <label>MDM Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDM_Parent_Customer_Code__c</fullName>
        <formula>Parent.MDMID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MDM Parent Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDM_SFDC_Golden_Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>MDM SFDC Golden Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDM_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MDM Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MDM_Validation_Comments__c</fullName>
        <label>MDM Validation Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MDM_Validation_Status__c</fullName>
        <label>MDM Validation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unvalidated</fullName>
                    <default>true</default>
                    <label>Unvalidated</label>
                </value>
                <value>
                    <fullName>Pending Validation</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>Pending for Descartes</fullName>
                </value>
                <value>
                    <fullName>Rejected by Descartes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MIData__c</fullName>
        <description>CSM-ACN-S-0036 - Text field for MI DATA</description>
        <label>MI Data</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_License_Number__c</fullName>
        <description>ESPSFDCQI-17854</description>
        <inlineHelpText>Please enter the Medical License Number</inlineHelpText>
        <label>Medical License Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_License_State__c</fullName>
        <description>ESPSFDCQI-17854</description>
        <inlineHelpText>Please enter the Medical License State</inlineHelpText>
        <label>Medical License State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_License_Verification_Date__c</fullName>
        <description>ESPSFDCQI-17854</description>
        <inlineHelpText>Please enter the Medical Verification Date</inlineHelpText>
        <label>Medical License Verification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mulesoft_Force_Update__c</fullName>
        <description>CRM-MC-ESPSFDCQI-2544 - Field to allow mulesoft update to be forced</description>
        <inlineHelpText>Field to allow mulesoft update to be forced</inlineHelpText>
        <label>Mulesoft Force Update</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OngoingMaintenance__c</fullName>
        <description>CSM - ACN - S-0036 - Ongoing Maintenance</description>
        <label>Ongoing Maintenance</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is PO Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Specialty__c</fullName>
        <description>ESPSFDCQI-17854</description>
        <inlineHelpText>Please select the Primary Specialty</inlineHelpText>
        <label>Primary Specialty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cardiology</fullName>
                </value>
                <value>
                    <fullName>Dermatology</fullName>
                </value>
                <value>
                    <fullName>Family Medicine</fullName>
                </value>
                <value>
                    <fullName>Gastroenterology</fullName>
                </value>
                <value>
                    <fullName>Hematology</fullName>
                </value>
                <value>
                    <fullName>Hepatology</fullName>
                </value>
                <value>
                    <fullName>Immunology</fullName>
                </value>
                <value>
                    <fullName>Infectious Disease</fullName>
                </value>
                <value>
                    <fullName>Internal Medicine</fullName>
                </value>
                <value>
                    <fullName>Neurology</fullName>
                </value>
                <value>
                    <fullName>OBGYN</fullName>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                </value>
                <value>
                    <fullName>Ophthalmology</fullName>
                </value>
                <value>
                    <fullName>Psychiatry</fullName>
                </value>
                <value>
                    <fullName>Pulmonology</fullName>
                </value>
                <value>
                    <fullName>Rheumatology</fullName>
                </value>
                <value>
                    <fullName>Urology</fullName>
                </value>
                <value>
                    <fullName>Pediatrics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QuipDocURL__c</fullName>
        <description>IQVIACBEXC-14 - Stores the Quip document URL after generation</description>
        <label>Account Tear Sheet</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>QuipFolder_URL__c</fullName>
        <description>IQVIACBEXC-14 - Holds the Quip folder URL for the generated Quip document</description>
        <label>QuipFolder URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RDCategorization__c</fullName>
        <description>CSM-ACN-S-0036 - Picklist field with values Sponsor,Site, Internal, External</description>
        <label>R&amp;D Categorization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sponsor</fullName>
                </value>
                <value>
                    <fullName>Site</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RDClinicalSite__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Must be Only needed for R&amp;D purpose</inlineHelpText>
        <label>R&amp;D Clinical Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RDSponsor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CSM - ACN - S0036 - R&amp;D Sponsor</description>
        <label>R&amp;D Sponsor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RD_Spend__c</fullName>
        <description>CRM-MC-ESPSFDCQI-3027/ ESPSFDCQI-15835</description>
        <inlineHelpText>Please submit a VIA Ticket to MDM Team if you want to change value at the field on Validated Account (MDM Validation Status = Validated)</inlineHelpText>
        <label>Research Spend</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Research Spend &gt; $1.5B</fullName>
                </value>
                <value>
                    <fullName>Research Spend $200M - $1.5B</fullName>
                </value>
                <value>
                    <fullName>Research Spend $125M - $200M</fullName>
                </value>
                <value>
                    <fullName>Research Spend &lt;$125M</fullName>
                </value>
                <value>
                    <fullName>Research Spend not applicable</fullName>
                </value>
                <value>
                    <fullName>Research Spend Unknown</fullName>
                </value>
                <value>
                    <fullName>B- Research Spend $200M- $1.5B</fullName>
                    <isActive>false</isActive>
                    <label>B- Research Spend $200M- $1.5B</label>
                </value>
                <value>
                    <fullName>C- Research Spend $125M- $200M</fullName>
                    <isActive>false</isActive>
                    <label>C- Research Spend $125M- $200M</label>
                </value>
                <value>
                    <fullName>Large</fullName>
                    <isActive>false</isActive>
                    <label>Large</label>
                </value>
                <value>
                    <fullName>Small</fullName>
                    <isActive>false</isActive>
                    <label>Small</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region_Territory__c</fullName>
        <inlineHelpText>Pick the Geographical Territory that this account pertains to from the list. 
Only use the &quot;IMS Operations&quot; item (last one in the list) for the creation of Global Accounts.</inlineHelpText>
        <label>Territory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Cayman Islands</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Cote d&apos;Ivoire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>CSM-ACN-S-0036 - Picklist that defines Region with values &quot;&quot;EMEA&quot;, &quot;LATAM&quot;, &quot;NA&quot;, &quot;APAC&quot;</description>
        <label>Regional Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>AMER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>CRM-MC-ESPSFDCQI-5908 - Who (internal IQVIA)  maintains the relationship with this Account</inlineHelpText>
        <label>Relationship Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RelationshipManager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Research_Role__c</fullName>
        <description>ESPSFDCQI-17854</description>
        <inlineHelpText>Please select the Research Role</inlineHelpText>
        <label>Research Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Principal Investigator</fullName>
                </value>
                <value>
                    <fullName>Sub-Investigator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RevenueCategory__c</fullName>
        <description>ESPSFDCQI-15610</description>
        <label>Revenue Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Category__c</fullName>
        <description>CRM-MC-ESPSFDCQI-1462 -/ESPSFDCQI-15610</description>
        <inlineHelpText>Please submit a VIA Ticket to MDM Team if you want to change value at the field on Validated Account (MDM Validation Status = Validated)</inlineHelpText>
        <label>DEL Revenue Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>$100M to $500M</fullName>
                </value>
                <value>
                    <fullName>$10B Plus</fullName>
                </value>
                <value>
                    <fullName>$10M to $50M</fullName>
                </value>
                <value>
                    <fullName>$1B to $10B</fullName>
                </value>
                <value>
                    <fullName>$1M to $10M</fullName>
                </value>
                <value>
                    <fullName>$500M to $1B</fullName>
                </value>
                <value>
                    <fullName>$50m to $100M</fullName>
                </value>
                <value>
                    <fullName>Less than $1M</fullName>
                </value>
                <value>
                    <fullName>Phase 1 to Phase 2</fullName>
                </value>
                <value>
                    <fullName>Phase 3 to Filling</fullName>
                </value>
                <value>
                    <fullName>Pre-Clinical</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_Rating__c</fullName>
        <description>CRM-MC-ESPSFDCQI-6801/7923</description>
        <label>Risk Rating Controller(Only for Finance)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1- Very Low</fullName>
                </value>
                <value>
                    <fullName>2- Low</fullName>
                </value>
                <value>
                    <fullName>3- Moderate</fullName>
                </value>
                <value>
                    <fullName>4- High</fullName>
                </value>
                <value>
                    <fullName>5- Very High</fullName>
                </value>
                <value>
                    <fullName>6- Do Not Sell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAPID__c</fullName>
        <description>CSM-ACN-S-0036 - Textfield that will hold SAP ID</description>
        <label>SAP ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Code__c</fullName>
        <label>SAP Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_PC_Code__c</fullName>
        <description>Legacy field. This field will eventually be removed.</description>
        <inlineHelpText>Legacy field. This field will eventually be removed.
Holds the SAP Parent-level account reference. This value will be migrated to &quot;SAP Reference&quot; field.</inlineHelpText>
        <label>SAP PC Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>